compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__range_snapshots@expr_nested_exclusive.snap
---
source: compiler/lume_hir/src/lower/tests.rs
description: "\n        let a = 0;\n        let b = 1;\n        let _ = ((a + b)..(a + b + 1));"
---
[
    Statement {
        id: 0,
        kind: Variable(
            VariableDeclaration {
                id: 0,
                name: Identifier {
                    name: "a",
                    location: <internal>:13:14,
                },
                declared_type: None,
                value: Expression {
                    id: 5871781006564002453,
                    location: <internal>:17:18,
                    kind: Literal(
                        Literal {
                            id: 5871781006564002453,
                            location: <internal>:17:18,
                            kind: Int(
                                IntLiteral {
                                    id: 5871781006564002453,
                                    value: 0,
                                    kind: I32,
                                },
                            ),
                        },
                    ),
                },
            },
        ),
        location: <internal>:9:19,
    },
    Statement {
        id: 11743562013128004906,
        kind: Variable(
            VariableDeclaration {
                id: 11743562013128004906,
                name: Identifier {
                    name: "b",
                    location: <internal>:32:33,
                },
                declared_type: None,
                value: Expression {
                    id: 17615343019692007359,
                    location: <internal>:36:37,
                    kind: Literal(
                        Literal {
                            id: 17615343019692007359,
                            location: <internal>:36:37,
                            kind: Int(
                                IntLiteral {
                                    id: 17615343019692007359,
                                    value: 1,
                                    kind: I32,
                                },
                            ),
                        },
                    ),
                },
            },
        ),
        location: <internal>:28:38,
    },
    Statement {
        id: 5040379952546458196,
        kind: Variable(
            VariableDeclaration {
                id: 5040379952546458196,
                name: Identifier {
                    name: "_",
                    location: <internal>:51:52,
                },
                declared_type: None,
                value: Expression {
                    id: 10912160959110460649,
                    location: <internal>:57:74,
                    kind: StaticCall(
                        StaticCall {
                            id: 10912160959110460649,
                            name: std::new::Range,
                            type_arguments: [
                                Implicit {
                                    location: <internal>:0:0,
                                },
                            ],
                            arguments: [
                                Expression {
                                    id: 16783941965674463102,
                                    location: <internal>:57:61,
                                    kind: InstanceCall(
                                        InstanceCall {
                                            id: 16783941965674463102,
                                            callee: Expression {
                                                id: 10080759905092916392,
                                                location: <internal>:57:58,
                                                kind: Variable(
                                                    Variable {
                                                        id: 10080759905092916392,
                                                        reference: 0,
                                                        name: Identifier {
                                                            name: "a",
                                                            location: <internal>:57:58,
                                                        },
                                                        location: <internal>:57:58,
                                                    },
                                                ),
                                            },
                                            name: Identifier {
                                                name: "+",
                                                location: <internal>:59:60,
                                            },
                                            type_arguments: [],
                                            arguments: [
                                                Expression {
                                                    id: 4208978898528913939,
                                                    location: <internal>:61:62,
                                                    kind: Variable(
                                                        Variable {
                                                            id: 4208978898528913939,
                                                            reference: 11743562013128004906,
                                                            name: Identifier {
                                                                name: "b",
                                                                location: <internal>:61:62,
                                                            },
                                                            location: <internal>:61:62,
                                                        },
                                                    ),
                                                },
                                            ],
                                        },
                                    ),
                                },
                                Expression {
                                    id: 15952540911656918845,
                                    location: <internal>:66:74,
                                    kind: InstanceCall(
                                        InstanceCall {
                                            id: 15952540911656918845,
                                            callee: Expression {
                                                id: 9249358851075372135,
                                                location: <internal>:66:70,
                                                kind: InstanceCall(
                                                    InstanceCall {
                                                        id: 9249358851075372135,
                                                        callee: Expression {
                                                            id: 2546176790493825425,
                                                            location: <internal>:66:67,
                                                            kind: Variable(
                                                                Variable {
                                                                    id: 2546176790493825425,
                                                                    reference: 0,
                                                                    name: Identifier {
                                                                        name: "a",
                                                                        location: <internal>:66:67,
                                                                    },
                                                                    location: <internal>:66:67,
                                                                },
                                                            ),
                                                        },
                                                        name: Identifier {
                                                            name: "+",
                                                            location: <internal>:68:69,
                                                        },
                                                        type_arguments: [],
                                                        arguments: [
                                                            Expression {
                                                                id: 15121139857639374588,
                                                                location: <internal>:70:71,
                                                                kind: Variable(
                                                                    Variable {
                                                                        id: 15121139857639374588,
                                                                        reference: 11743562013128004906,
                                                                        name: Identifier {
                                                                            name: "b",
                                                                            location: <internal>:70:71,
                                                                        },
                                                                        location: <internal>:70:71,
                                                                    },
                                                                ),
                                                            },
                                                        ],
                                                    },
                                                ),
                                            },
                                            name: Identifier {
                                                name: "+",
                                                location: <internal>:72:73,
                                            },
                                            type_arguments: [],
                                            arguments: [
                                                Expression {
                                                    id: 3377577844511369682,
                                                    location: <internal>:74:75,
                                                    kind: Literal(
                                                        Literal {
                                                            id: 3377577844511369682,
                                                            location: <internal>:74:75,
                                                            kind: Int(
                                                                IntLiteral {
                                                                    id: 3377577844511369682,
                                                                    value: 1,
                                                                    kind: I32,
                                                                },
                                                            ),
                                                        },
                                                    ),
                                                },
                                            ],
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            },
        ),
        location: <internal>:47:78,
    },
]
