compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__using_self_as_parameter@invalid.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "impl Foo {\n        pub fn bar(a: Int32, self) -> void { }\n    }"
---
× error[LM3014]: self must be the first parameter
   ╭───────────
 1 │ impl Foo {
 2 │         pub fn bar(a: Int32, self) -> void { }
   │                              ^^^^ instance methods must have self as the first parameter
 3 │     }
   ╰──
   help: consider moving the self parameter to the beginning
